<resources>
    <string name="app_name">V Alpheus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">V Alpheus\'s Store</string>
    <string name="nav_header_subtitle">Name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_subheader">Welcome to Alpheus\'s Store! Shopping is the best theraphy^^</string>
    <string name="home_description">Welcome dears! V Alpheus\'s Store telah ada semenjak tahun 2018 ya dears, V Alpheus\'s Store menyediakan produk - produk berkelas seperti Parfum, Baju, Sepatu, Tas, Sepatu, Accessories serta Make Up dari brand ternama yang terkenal di dunia yaitu Brand Zara, Balenciaga, Gucci, YSL, Dior, Celine, Chanel, Louis Vuitton, Prada, Nike, Hermes dan Bvlgari. Silahkan cek produk yang tersedia di website ini. Selamat berbelanja di V Alpheus\'s Store yaa!</string>
    <string name="home_data_header">Data Produk Tersedia</string>
    <string name="home_data_subheader">Belum ada data yang tersedia</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="kategori">Kategori</string>
    <string name="placeholder">[placeholder]</string>
    <string name="kategori_colon">Kategori: </string>
    <string name="ukuran_colon">Ukuran: </string>
    <string name="warna_colon">Warna: </string>
    <string name="satuan_colon">Satuan: </string>
    <string name="harga_colon">Harga: </string>
    <string name="stok_colon">Stok: </string>
    <string name="login_please">Silahkan login terlebih dahulu</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="kode">Kode</string>
    <string name="nama">Nama</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="brand_list">Brand List</string>
    <string name="kode_colon">Kode: </string>
    <string name="nama_colon">"Nama: "</string>
    <string name="delete">Delete</string>
    <string name="brand">Brand</string>
    <string name="ukuran">Ukuran</string>
    <string name="warna">Warna</string>
    <string name="satuan">Satuan</string>
    <string name="harga">Harga</string>
    <string name="stok">Stok</string>
    <string name="kode_brand">Kode Brand</string>
    <string name="kode_produk">Kode Produk</string>
    <string name="produk_list">Produk List</string>
    <string name="nama_brand_colon">"Nama Brand: "</string>
    <string name="nama_produk_colon">"Nama Produk: "</string>
    <string name="produk">Produk</string>
    <string name="transaksi_list">Transaksi List</string>
    <string name="jumlah_beli_colon">"Jumlah Beli: "</string>
    <string name="transaksi">Transaksi</string>
    <string name="kode_transaksi">Kode Transaksi</string>
    <string name="jumlah_beli">Jumlah Beli</string>
    <string name="pembayaran_list">Pembayaran List</string>
    <string name="kode_transaksi_colon">"Kode Transaksi: "</string>
    <string name="tanggal_colon">"Tanggal: "</string>
    <string name="total_pembelian_colon">"Total Pembelian: "</string>
    <string name="total_bayar_colon">"Total Bayar: "</string>
    <string name="sisa_bayar_colon">"Sisa Bayar: "</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="no_nota">No Nota</string>
    <string name="tanggal">Tanggal</string>
    <string name="total_pembelian">Total Pembelian</string>
    <string name="total_bayar">Total Bayar</string>
</resources>