<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_login"
            android:title="@string/login" />
        <item
            android:id="@+id/nav_brand"
            android:enabled="false"
            android:icon="@drawable/ic_menu_brand"
            android:title="@string/brand" />
        <item
            android:id="@+id/nav_produk"
            android:enabled="false"
            android:icon="@drawable/ic_menu_produk"
            android:title="@string/produk" />
    </group>
</menu>