<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="upr.uas.vivi.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_login"
        android:name="upr.uas.vivi.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/nav_brand"
        android:name="upr.uas.vivi.ui.brand.BrandFragment"
        android:label="@string/brand"
        tools:layout="@layout/fragment_brand" />
    <fragment
        android:id="@+id/nav_produk"
        android:name="upr.uas.vivi.ui.produk.ProdukFragment"
        android:label="@string/produk"
        tools:layout="@layout/fragment_produk" />
</navigation>