<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".crud.produk.CreateProdukActivity">

    <LinearLayout
        android:id="@+id/produk_create_kode_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kode_produk" />

        <Spinner
            android:id="@+id/produk_create_kode_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/produk_create_kode_produk_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/produk_create_kode_ll"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kode_brand" />

        <Spinner
            android:id="@+id/produk_create_kode_produk_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/produk_create_nama_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/produk_create_kode_produk_ll"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama" />

        <EditText
            android:id="@+id/produk_create_nama_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/produk_create_ukuran_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/produk_create_nama_ll"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ukuran" />

        <EditText
            android:id="@+id/produk_create_ukuran_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/produk_create_warna_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/produk_create_ukuran_ll"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warna" />

        <EditText
            android:id="@+id/produk_create_warna_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/produk_create_satuan_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/produk_create_warna_ll"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satuan" />

        <EditText
            android:id="@+id/produk_create_satuan_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/produk_create_harga_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/produk_create_satuan_ll"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga" />

        <EditText
            android:id="@+id/produk_create_harga_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/produk_create_stok_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/produk_create_harga_ll"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stok" />

        <EditText
            android:id="@+id/produk_create_stok_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/produk_create_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/produk_create_stok_ll"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_button_1"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textStyle="bold" />

</RelativeLayout>