<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".crud.pembayaran.UpdatePembayaranActivity">

    <LinearLayout
        android:id="@+id/pembayaran_update_nota_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_nota" />

        <EditText
            android:id="@+id/pembayaran_update_nota_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pembayaran_update_kode_transaksi_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pembayaran_update_nota_ll"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kode_transaksi" />

        <Spinner
            android:id="@+id/pembayaran_update_kode_transaksi_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pembayaran_update_tanggal_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pembayaran_update_kode_transaksi_ll"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal" />

        <EditText
            android:id="@+id/pembayaran_update_tanggal_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pembayaran_update_total_pembelian_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pembayaran_update_tanggal_ll"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_pembelian" />

        <EditText
            android:id="@+id/pembayaran_update_total_pembelian_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pembayaran_update_total_bayar_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pembayaran_update_total_pembelian_ll"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_bayar" />

        <EditText
            android:id="@+id/pembayaran_update_total_bayar_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/pembayaran_update_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pembayaran_update_total_bayar_ll"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_button_1"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textStyle="bold" />

</RelativeLayout>